controllers in progress

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="background-image">
+  <%= cl_image_tag("industrial_bg1_on9pl3",
+    crop: :fill,
+    ) %>
+</div>
+
+  <%# <%= link_to "Hey Pilot, get ready to fly!", "#", class: "btn btn-warning btn-lg fs-2 rounded-pill border border-white border-2 fw-bold text-white" %>
