--- a/app/assets/stylesheets/components/_button_highlighted_orange.scss
+++ b/app/assets/stylesheets/components/_button_highlighted_orange.scss
@@ -1,11 +1,11 @@
 .orange-highlighted-button {
 
   background-color: $orange;
-  color: $orange;
+  color: $white;
   border: none;
   border-radius: 4px; // Ajustez selon vos besoins
   padding: 10px 20px; // Ajustez selon vos besoins
-  font-size: 16px; // Ajustez selon vos besoins
+  font-size: 20px; // Ajustez selon vos besoins
   font-weight: bold;
   text-align: center;
   display: inline-flex;
