--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,3 +4,12 @@
   }
 }
 
+.new-form {
+  color: black;
+  background-color: white;
+  border-radius: 4px;
+  .form-control {
+    background-color: white;
+    color: gray;
+  }
+}
