--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-3" id="new-ticket-layout">
-  <h1 class="text-center mb-4">Création ticket</h1>
+  <h1 class="text-center mb-4">Création de votre ticket</h1>
 
   <div class="row justify-content-center">
     <div class="col-md-8">
@@ -8,31 +8,31 @@
           <%= simple_form_for @ticket, html: { class: "needs-validation" } do |f| %>
             <div class="mb-3">
               <%= f.input :photos,
-                          label: 'Photos',
+                          label: 'Photo',
                           input_html: {
                             capture: 'user',
                             accept: 'image/*',
                             multiple: true },
-                          wrapper_html: { class: 'custom-file' } %>
+                          input_html: { class: 'custom-file' } %>
             </div>
             <div class="mb-3">
               <%= f.input :title, label: 'Titre', input_html: { class: 'form-control' } %>
             </div>
             <div class="mb-3">
-              <%= f.input :content, label: 'Description', as: :text, input_html: { rows: 3, class: 'form-control' } %>
+              <%= f.input :content, label: 'Description (optionnelle)', as: :text, input_html: { rows: 3, class: 'form-control' } %>
             </div>
             <div class="mb-3">
               <%= f.input :priority,
                           label: 'Priorité',
                           collection: Ticket.priorities.keys.map { |p| [p.humanize, p] },
                           include_blank: false,
-                          input_html: { class: 'form-select' } %>
+                          input_html: { class: 'form-control' } %>
             </div>
             <div class="mb-3">
               <%= f.input :category, label: 'Catégorie', input_html: { class: 'form-control' } %>
             </div>
             <div class="d-grid">
-              <%= f.button :submit, 'Créer le ticket', class: 'btn btn-primary btn-block' %>
+              <%= f.button :submit, 'Valider le ticket', class: 'orange-highlighted-button' %>
             </div>
           <% end %>
         </div>
