--- a/app/assets/stylesheets/components/_card_product_infos.scss
+++ b/app/assets/stylesheets/components/_card_product_infos.scss
@@ -1,5 +1,7 @@
 .card-product-infos {
   background-color: $white;
   border-color: $orange;
-  color: $black
+  border-radius: 5px;
+  color: $black;
+
 }
