changes sur stylesheets comp & bootstrap variables + ccontroller actions + index actions, comms tickets et remove la navbar le wagon qui s'affiche dans la vue app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <% unless current_page?(home_path) %>
-      <%= render "shared/navbar" %>
+      <%# <%= render "shared/navbar" %>
     <% end %>
     <%= render "shared/flashes" %>
 
