--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,4 @@
 @import "navbar";
 @import "form";
 @import "card_product_infos";
-@import "button_highlighted_orange"
+@import "button_highlighted_orange";
