Elements added on the ticket show. Carousel fixed. Modifications of the progress bar to a progress point

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "navbar";
 @import "form";
 @import "card_product_infos";
-@import "button_highlighted_orange"
+@import "button_highlighted_orange";
+@import "ticket_show";
