--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,75 +1,82 @@
-<div>
-  <%# Ticket pictures carrousel %>
+<%# Ticket pictures carrousel %>
+<div id="show-container" class="d-flex flex-column">
 
-  <div id="carouselTicketShowPicture" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <!-- Carousel Section -->
+  <div class="row g-0 flex-grow-1">
+    <div class="col-12">
+      <div id="carouselExampleIndicators" class="carousel slide h-100">
+        <div class="carousel-indicators">
+          <% if @ticket.photos.any? %>
+            <% @ticket.photos.each_with_index do |_, index| %>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%= index %>" class="<%= 'active' if index == 0 %>" aria-current="<%= 'true' if index == 0 %>" aria-label="Slide <%= index + 1 %>"></button>
+            <% end %>
+          <% else %>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <% end %>
+        </div>
+
+        <div class="carousel-inner h-100">
+          <% if @ticket.photos.any? %>
+            <% @ticket.photos.each_with_index do |photo, index| %>
+              <div class="carousel-item <%= 'active' if index == 0 %> h-100">
+                <%= cl_image_tag photo.key, crop: "lfill", class: "d-block w-100 h-100", alt: "Ticket Image" %>
+              </div>
+            <% end %>
+          <% else %>
+            <div class="carousel-item active h-100">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg" class="d-block w-100 h-100" alt="No Image Available">
+            </div>
+          <% end %>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-      <%# Add here the link for the picture - cloudinary ? %>
-        <img src="https://as1.ftcdn.net/v2/jpg/03/58/09/32/1000_F_358093207_w3rP8qhYrl1eiszWetCbALwT4yuH8T1v.jpg" class="d-block w-100" alt="">
-      </div>
-      <div class="carousel-item">
-      <%# Add here the link for the picture - cloudinary ? %>
-        <img src="https://as1.ftcdn.net/v2/jpg/02/20/27/24/1000_F_220272450_it8jPKW7arroUdBXfv2sC8kY9LZmTRm2.jpg" class="d-block w-100" alt="">
-      </div>
-      <div class="carousel-item">
-      <%# Add here the link for the picture - cloudinary ? %>
-        <img src="https://www.freepik.com/free-photos-vectors/coding-wallpaper-vertical" class="d-block w-100" alt="">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
+</div>
 
+<div class="container">
   <%# Ticket informations %>
-  <div class="card-body d-flex justify-content-between mt-4">
+  <div class="card-body mt-4 mb-4">
     <%# title & category && Content %>
-    <h1><%= @ticket.title %></h1>
-    <p><strong><%= @ticket.category %></strong></p>
+    <h3 class="ticket-show-h-font"><strong><%= @ticket.category %> : <%= @ticket.title %></strong></h3>
   </div>
 
-  <%# Priority progress bar%>
-  <div class="mt-2 mb-3">
-    <%# Color of priority text %>
-    <div>
-      <p>Priority:
-        <span style="color: <%= progress_bar(@ticket.priority)[:color] %>">
-          <%= @ticket.priority.humanize %>
-        </span>
-      </p>
-    </div>
+  <%# Priority point%>
+  <div class="mt-2 mb-2 d-flex justify-content-between align-items-center">
+  <!-- Priority Text -->
+  <p class="ticket-show-p-font mb-0">
+    Prioritée :
+    <span style="color: <%= progress_point(@ticket.priority)[:color] %>">
+      <%= @ticket.priority.humanize %>
+    </span>
+  </p>
 
-    <%# Color of progress bar %>
-    <div class="progress"
-          role="progressbar"
-          aria-label="Basic example"
-          aria-valuenow="<%= progress_bar(@ticket.priority)[:number] %>"
-          aria-valuemin="0"
-          aria-valuemax="100">
-      <div class="progress-bar"
-          style="width: <%= progress_bar(@ticket.priority)[:number] %>%;
-          background-color: <%= progress_bar(@ticket.priority)[:color] %>">
-      </div>
-    </div>
+  <!-- Progress Point -->
+  <span class="progress-point"
+    style="background-color: <%= progress_point(@ticket.priority)[:color] %>;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      display: inline-block;">
+  </span>
   </div>
 
   <%# Status %>
-  <div class="mt-2 mb-2">
-    <p><strong>Status:</strong> <%= @ticket.status.capitalize %></p>
+  <div class="mt-3 mb-2 ticket-show-p-font">
+    <p><strong>Statut :</strong> <%= @ticket.status.capitalize %></p>
   </div>
 
   <%# Creation date / Update date %>
-  <div>
+  <div class="ticket-show-p-font">
     <% if @ticket.created_at == @ticket.updated_at %>
       <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
     <% else %>
@@ -79,32 +86,37 @@
   </div>
 
   <%# Utilisateur %>
-  <p><strong>Utilisateur :</strong> <%= @ticket.user.first_name %> <%= @ticket.user.last_name %></p>
-  </div>
+  <p class="ticket-show-p-font"><strong>Utilisateur :</strong> <%= @ticket.user.first_name %> <%= @ticket.user.last_name %></p>
 
   <%# Content %>
-  <div class="card-body">
+  <div class="card-body ticket-show-p-font">
     <p><%= @ticket.content %></p>
   </div>
 
+
+
   <%# Actions %>
-  <div>
+<div>
   <br>
-    <p><strong>Actions à mettre en place :</strong></p>
-    <% @ticket.actions.each do |action| %>
-      <div class="card mt-2 mb-2">
-        <div class="card-body">
-          <p><strong><%= action.title.capitalize %></strong></p>
-          <br>
-          <p>Date butoir : <%= action.due_date %> </p>
+  <h5 class="mb-4"><strong>Actions à mettre en place :</strong></h5>
+  <% @ticket.actions.each do |action| %>
+    <div class="card mt-2 mb-2 card-show-ticket">
+      <div class="card-body">
+        <h6 class="ticket-show-h-font"><strong><%= action.title.capitalize %></strong></h6>
+
+        <p class="mt-3 mb-0">Attribué à : <%= action.user.first_name %> <%= action.user.last_name %><%=  %></p>
+
+        <div class="d-flex justify-content-between align-items-center ticket-show-p-font mt-2">
+          <p class="mb-0">Date butoir : <%= action.due_date %></p>
           <% if action.status == "ongoing" %>
-            <p style="color:#FA812F"><%= action.status.capitalize %></p>
+            <span class="card-tkt-show-ongoing rounded-pill"><%= action.status.capitalize %></span>
           <% elsif action.status == "solved" %>
-            <p style="color:#6EC207"><%= action.status.capitalize %></p>
+            <span class="card-tkt-show-solved rounded-pill"><%= action.status.capitalize %></span>
           <% end %>
-          <p><%= action.content %></p>
         </div>
+
+        <p class="mt-2"><%= action.content %></p>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
