changes on application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
 
-    <% if current_page?(ticket_path(@ticket)) %>
+    <% if controller_name == "tickets" && action_name == "show" %>
       <%= yield %>
     <% else %>
       <div class="container">
