--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -23,15 +23,38 @@
 
 
 <div class="container mt-3">
-  <div class="row justify-content-center">
-      <% @communications.each do |communication| %>
-      <div class="d-flex justify-content-between m-1 rounded-4 border-2">
-        <%# <%= cl_image_tag booking.rocket.photos.first.key%>
+  <div class="row justify-content-center mb-3">
+    <% @communications.each do |communication| %>
+
+      <div class="d-flex justify-content-between m-1 rounded-4 border-2 card-product"
+        data-bs-toggle="modal"
+        data-bs-target="#<%= communication.id %>-communication"
+        data-title="<%= communication.title %>"
+        data-category="<%= communication.category %>"
+        data-content="<%= communication.content %>">
         <div class="card-product-infos">
-          <h2><strong><%= communication.category %></strong>: <%= communication.title %></h2>
-          <p><%= communication.content %></p>
+          <h2>
+            <strong><%= communication.category %></strong>: <%= communication.title %>
+          </h2>
+          <p><%= truncate(communication.content, length: 100) %></p>
         </div>
       </div>
-  <% end %>
+
+      <div class="modal fade" id="<%= communication.id %>-communication" data-bs-backdrop="true" data-bs-keyboard="true" tabindex="-1" aria-labelledby="<%= communication.id %>-communicationLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content bg-white text-dark">
+            <div class="modal-header">
+              <h1 class="modal-title fs-1" id="<%= communication.id %>-communicationLabel"><%= communication.title %></h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                  <div class="modal-body">
+                    <p class="fs-4"><%= communication.category %></p>
+                    <p class="text-start"><%= communication.content %></p>
+                  </div>
+            </div>
+          </div>
+        </div>
+
+    <% end %>
   </div>
 </div>
