--- a/app/assets/stylesheets/components/_card_product_infos.scss
+++ b/app/assets/stylesheets/components/_card_product_infos.scss
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
   color: $black;
   padding: 5px;
   width: 100%;
-  height: 115px;
+  // height: 115px;
   cursor: pointer; /* Change le curseur pour indiquer que c'est cliquable */
   transition: transform 0.2s; /* Animation de hover */
 }
