--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -23,7 +23,7 @@
 
 
 <div class="container mt-3">
-  <div class="row justify-content-center mb-3">
+  <div class="row mx-0 p-2 justify-content-center mb-3">
     <% @communications.each do |communication| %>
 
       <div class="d-flex justify-content-between m-1 rounded-4 border-2 card-product"
@@ -34,9 +34,9 @@
         data-content="<%= communication.content %>">
         <div class="card-product-infos">
           <h2>
-            <strong><%= communication.category %></strong>: <%= communication.title %>
+            <strong><%= communication.category.capitalize %></strong>: <%= communication.title %>
           </h2>
-          <p><%= truncate(communication.content, length: 100) %></p>
+          <p><%= truncate(communication.content.capitalize, length: 100) %></p>
         </div>
       </div>
 
@@ -48,8 +48,8 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                   <div class="modal-body">
-                    <p class="fs-4"><%= communication.category %></p>
-                    <p class="text-start"><%= communication.content %></p>
+                    <p class="fs-4"><%= communication.category.capitalize %></p>
+                    <p class="text-start"><%= communication.content.capitalize %></p>
                   </div>
             </div>
           </div>
