--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -33,39 +33,37 @@
 
 
 
-<div class="container-index mt-3">
-  <div class="row mx-0 p-2 justify-content-center mb-3">
-    <% @communications.each do |communication| %>
+<div class="container-index justify-content-center mt-3">
+  <% @communications.each do |communication| %>
 
-      <div class="d-flex-ticket justify-content-between m-1 rounded-4 border-2 card-product"
-        data-bs-toggle="modal"
-        data-bs-target="#<%= communication.id %>-communication"
-        data-title="<%= communication.title %>"
-        data-category="<%= communication.category %>"
-        data-content="<%= communication.content %>">
-        <div class="card-product-infos">
-          <h2>
-            <strong><%= communication.category.capitalize %></strong>: <%= communication.title %>
-          </h2>
-          <p><%= truncate(communication.content.capitalize, length: 100) %></p>
+    <div class="d-flex-ticket justify-content-between rounded-4 border-2 card-product"
+      data-bs-toggle="modal"
+      data-bs-target="#<%= communication.id %>-communication"
+      data-title="<%= communication.title %>"
+      data-category="<%= communication.category %>"
+      data-content="<%= communication.content %>">
+      <div class="card-product-infos">
+        <h2>
+          <strong><%= communication.category.capitalize %></strong>: <%= communication.title %>
+        </h2>
+        <p><%= truncate(communication.content.capitalize, length: 100) %></p>
+      </div>
+    </div>
+
+    <div class="modal fade" id="<%= communication.id %>-communication" data-bs-backdrop="true" data-bs-keyboard="true" tabindex="-1" aria-labelledby="<%= communication.id %>-communicationLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content bg-white text-dark">
+          <div class="modal-header">
+            <h1 class="modal-title fs-1" id="<%= communication.id %>-communicationLabel"><%= communication.title %></h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+                <div class="modal-body">
+                  <p class="fs-4"><%= communication.category.capitalize %></p>
+                  <p class="text-start"><%= communication.content.capitalize %></p>
+                </div>
+          </div>
         </div>
       </div>
 
-      <div class="modal fade" id="<%= communication.id %>-communication" data-bs-backdrop="true" data-bs-keyboard="true" tabindex="-1" aria-labelledby="<%= communication.id %>-communicationLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content bg-white text-dark">
-            <div class="modal-header">
-              <h1 class="modal-title fs-1" id="<%= communication.id %>-communicationLabel"><%= communication.title %></h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                  <div class="modal-body">
-                    <p class="fs-4"><%= communication.category.capitalize %></p>
-                    <p class="text-start"><%= communication.content.capitalize %></p>
-                  </div>
-            </div>
-          </div>
-        </div>
-
-    <% end %>
-  </div>
+  <% end %>
 </div>
