--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -72,7 +72,16 @@
 
   <%# Status %>
   <div class="mt-3 mb-2 ticket-show-p-font">
-    <p><strong>Statut :</strong> <%= @ticket.status.capitalize %></p>
+    <p><strong>Statut :</strong>
+      <% if @ticket.status == "nouveau" %>
+          <span class="card-tkt-show-new rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
+        <% elsif @ticket.status == "en cours" %>
+          <span class="card-tkt-show-ongoing rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
+        <% elsif @ticket.status == "résolu" %>
+          <span class="card-tkt-show-solved rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
+      <% end %>
+    </p>
+
   </div>
 
   <%# Creation date / Update date %>
@@ -108,9 +117,11 @@
 
         <div class="d-flex justify-content-between align-items-center ticket-show-p-font mt-2">
           <p class="mb-0">Date butoir : <%= action.due_date %></p>
-          <% if action.status == "ongoing" %>
+          <% if action.status == "nouveau" %>
+            <span class="card-tkt-show-new rounded-pill"><%= action.status.capitalize %></span>
+          <% elsif action.status == "en cours" %>
             <span class="card-tkt-show-ongoing rounded-pill"><%= action.status.capitalize %></span>
-          <% elsif action.status == "solved" %>
+          <% elsif action.status == "résolu" %>
             <span class="card-tkt-show-solved rounded-pill"><%= action.status.capitalize %></span>
           <% end %>
         </div>
