--- a/app/views/actions/index.html.erb
+++ b/app/views/actions/index.html.erb
@@ -32,20 +32,18 @@
   </div>
 </div>
 
-
-
-
 <div class="container-index mt-3">
   <% @tickets.each do |ticket| %>
     <% ticket.actions.each do |action| %>
       <div class="d-flex-ticket rounded-4">
         <%= link_to action_path(action), class: "" do%>
         <%# <%= cl_image_tag booking.rocket.photos.first.key%>
-        <div class="card-product-infos h-160">
+        <div class="card-product-infos">
           <h2 class=""><%= action.title %></h2>
           <p class=""><%= action.due_date %></p>
           <p class=""><%= action.status %></p>
-          <p class=""><%= action.user_id%></p>
+          <p><%= action.ticket.team.name %></p>
+          <p class=""><%= action.user.email %></p>
         </div>
         <% end %>
       </div>
