--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -38,9 +38,9 @@
         <div>
           <div>
             <%= link_to ticket_path(ticket), class: "" do%>
-              <%if ticket.photos.attached?%>
-                <%= cl_image_tag ticket.photos.first.key, alt: "Picture of #{ticket.title}", class: "" %>
-              <%else%>
+              <%# <%if ticket.photos.attached?%>
+                <%# <%= cl_image_tag ticket.photos.first.key, alt: "Picture of #{ticket.title}", class: "" %>
+              <%# <%else%>
                 <div class="card-product-infos">
                   <h2 class=""><strong><%= ticket.category %></strong>: <%= ticket.title %></h2>
                   <div class="d-flex justify-content-between align-items-center">
@@ -61,7 +61,7 @@
                   </div>
                   <p class=""><%= ticket.content %></p>
                 </div>
-              <% end %>
+              <%# <% end %>
             <% end %>
           </div>
         </div>
