--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -18,22 +18,39 @@
   }
 }
 
-#camera-container {
-  position: relative;
-  width: 100%;
-  max-width: 500px;
-  margin: 0 auto;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
-.responsive-video,
-.responsive-canvas,
-.responsive-img {
-  width: 100%;
-  height: auto;
+.button-like-label {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff; /* Couleur de fond (bleu) */
+  color: white; /* Couleur du texte */
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer; /* Change le curseur en mode "pointer" */
+  text-decoration: none;
+  transition: background-color 0.3s, transform 0.2s; /* Animation sur le hover */
 }
 
-@media (max-width: 767px) {
-  #camera-container {
-    width: 100%;
-  }
+.button-like-label:hover {
+  background-color: #0056b3; /* Couleur de fond plus sombre au survol */
+  transform: scale(1.05); /* Légère mise en avant */
+}
+
+.button-like-label:active {
+  background-color: #003f7f; /* Couleur encore plus sombre lorsque cliqué */
+  transform: scale(0.95); /* Légère réduction pour un effet de clic */
 }
