font des navbar, add navbar to show ticket, index action link to associated ticket show

--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -45,3 +45,8 @@
   display: inline-block;
   white-space: nowrap;
 }
+
+.container-index {
+  padding: 0; /* Supprime les marges internes */
+  padding-bottom: 100px; /* Ajustez la valeur en fonction de la hauteur de la navbar */
+}
