--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -46,11 +46,11 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex justify-content-between align-items-center ticket-show-p-font">
                       <% if ticket.status == "nouveau" %>
-                        <span class="card-tkt-show-new rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
+                        <span class="card-tkt-show-nouveau rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
                       <% elsif ticket.status == "en cours" %>
-                        <span class="card-tkt-show-ongoing rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
+                        <span class="card-tkt-show-encours rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
                       <% elsif ticket.status == "résolu" %>
-                        <span class="card-tkt-show-solved rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
+                        <span class="card-tkt-show-resolu rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
                       <% end %>
                     </div>
                     <strong><p>Priority:
