Button switch fixed & Comments Ticket created

--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -45,7 +45,34 @@
   white-space: nowrap;
 }
 
- /* The switch - the box around the slider */
+// Switch status text encours
+.card-tkt-show-encours-txt {
+  font-weight: bold;
+  color: rgb(226, 226, 1);
+  text-align: center;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+// Switch status text resolu
+.card-tkt-show-resolu-txt {
+  font-weight: bold;
+  color: green;
+  text-align: center;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.border-bottom-comment {
+  border-bottom: 2px solid $gray;
+  border-radius: 1px;
+  width: 90%;
+  margin: 0 auto;
+
+}
+
+
+/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
@@ -68,7 +95,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #FA812F;
+  background-color: rgb(226, 226, 1);
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -112,3 +139,64 @@ input:checked + .slider:before {
   padding: 0; /* Supprime les marges internes */
   padding-bottom: 100px; /* Ajustez la valeur en fonction de la hauteur de la navbar */
 }
+
+
+// // Switch button new possibility
+// .toggleContainer {
+//   position: relative;
+//   display: grid;
+//   grid-template-columns: repeat(2, 1fr);
+//   width: 120px; /* Augmentez la taille pour plus de lisibilité */
+//   height: 40px; /* Hauteur plus grande pour un meilleur confort visuel */
+//   border: 3px solid #343434;
+//   border-radius: 20px;
+//   background: #343434;
+//   font-weight: bold;
+//   color: #343434;
+//   cursor: pointer;
+// }
+
+// .toggleContainer::before {
+//   content: '';
+//   position: absolute;
+//   width: 50%;
+//   height: 100%;
+//   left: 0;
+//   border-radius: 20px;
+//   background: white;
+//   transition: all 0.3s;
+// }
+
+// .toggleCheckbox:checked + .toggleContainer::before {
+//   left: 50%;
+// }
+
+// .toggleContainer div {
+//   padding: 6px;
+//   text-align: center;
+//   z-index: 1;
+// }
+
+// .toggleCheckbox {
+//   display: none;
+// }
+
+// .toggleCheckbox:checked + .toggleContainer div:first-child {
+//   color: white;
+//   transition: color 0.3s;
+// }
+
+// .toggleCheckbox:checked + .toggleContainer div:last-child {
+//   color: #343434;
+//   transition: color 0.3s;
+// }
+
+// .toggleCheckbox + .toggleContainer div:first-child {
+//   color: #343434;
+//   transition: color 0.3s;
+// }
+
+// .toggleCheckbox + .toggleContainer div:last-child {
+//   color: white;
+//   transition: color 0.3s;
+// }
