--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -138,39 +138,55 @@
 
 
 
-    <%# Actions %>
-<div>
-  <br>
-  <h5 class="mb-4"><strong>Actions à mettre en place :</strong></h5>
-  <% @ticket.actions.each do |action| %>
-    <div class="card mt-2 mb-2 card-show-ticket" data-controller="action-switch">
-      <div class="card-body">
-        <h6 class="ticket-show-h-font"><strong><%= action.title.capitalize %></strong></h6>
+  <%# Actions %>
+  <div>
+    <br>
+    <h5 class="mb-4 ticket-show-h-font"><strong>Actions à mettre en place :</strong></h5>
+    <% @ticket.actions.each do |action| %>
+      <div class="card mt-2 mb-2 card-show-ticket" data-controller="action-switch">
+        <div class="card-body">
+          <h6 class="ticket-show-h-font"><strong><%= action.title.capitalize %></strong></h6>
 
-        <p class="mt-3 mb-0">Attribué à : <%= action.user.first_name %> <%= action.user.last_name %></p>
+          <p class="mt-3 mb-0">Attribué à : <%= action.user.first_name %> <%= action.user.last_name %></p>
 
-        <div class="d-flex justify-content-between align-items-center ticket-show-p-font mt-2">
-          <p class="mb-0">Date butoir : <%= action.due_date %></p>
+          <div class="d-flex justify-content-between align-items-center ticket-show-p-font mt-2">
+            <p class="mb-0 ticket-show-p-font">Date butoir : <br><%= action.due_date %></p>
 
-          <!-- Rounded switch -->
-          <div data-controller="switch-status">
-            <% if action.status == "en cours" %>
-              <span class="card-tkt-show-encours-txt"><%= action.status.capitalize %></span>
+            <!-- Rounded switch -->
+            <div data-controller="switch-status" data-switch-status-id-value=<%= action.id %>>
+              <span data-switch-status-target="status" class="<%= action.status == 'en cours' ? 'card-tkt-show-encours-txt' : 'card-tkt-show-resolu-txt' %> ticket-show-p-font">
+                <%= action.status.capitalize %>
+              </span>
               <label class="switch">
-                <input type="checkbox" data-action="change->switch-status#switch">
+                <input type="checkbox" data-action="change->switch-status#switch" <%= 'checked' if action.status == 'complétée' %>>
                 <span class="slider round"></span>
               </label>
-            <% elsif action.status == "complétée" %>
-              <span class="card-tkt-show-resolu-txt"><%= action.status.capitalize %></span>
-              <label class="switch">
-                <input type="checkbox" data-action="change->switch-status#switch">
-                <span class="slider round"></span>
-              </label>
-            <% end %>
+            </div>
           </div>
+          <p class="mt-2 ticket-show-p-font"><%= action.content %></p>
         </div>
-        <p class="mt-2"><%= action.content %></p>
       </div>
     <% end %>
+  </div>
+
+  <%# Comments %>
+  <div>
+    <h5 class="mt-4 mb-4 ticket-show-h-font"><strong>Commentaires :</strong></h5>
+    <div class="card mt-2 mb-2 card-show-ticket">
+      <% @ticket.comments.each do |comment| %>
+          <div class="border-bottom-comment card-body ticket-show-p-font mt-2 mb-2">
+            <p class=""><strong><%= comment.user.first_name %> <%= comment.user.last_name %></strong></p>
+            <p class="">Le : <%= comment.created_at %></p>
+            <p class=""><%= comment.content.capitalize %></p>
+          </div>
+      <% end %>
+    </div>
+  </div>
 </div>
-</div>
+
+<%# <!-- Toggle button new possibility -->
+<input type="checkbox" id="toggle" class="toggleCheckbox" />
+<label for="toggle" class='toggleContainer'>
+  <div>This is a toggle</div>
+  <div>button</div>
+</label> %>
