--- a/app/assets/stylesheets/components/_button_highlighted_orange.scss
+++ b/app/assets/stylesheets/components/_button_highlighted_orange.scss
@@ -39,11 +39,10 @@
   cursor: pointer;
   box-shadow: none;
 
-  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  transition: color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 
   &:hover {
-    background-color: $orange;
-    color: $white;
-    box-shadow: 0px 4px 6px rgba($orange, 0.5);
+    color: darken($orange, 10%);
+    box-shadow: 0px 3px 4px rgba($orange, 0.7);
   }
 }
