--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,7 @@ $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $green: #1EDD88;
-$orange: #F96D00;
+$orange: #f96d00;
 $black: #222831;
 $gray: #393E46;
 $white: #F2F2F2;
