--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -9,12 +9,12 @@
 }
 
 .new-form {
-  color: black;
+  color: #000000;
   background-color: white;
   border-radius: 4px;
   .form-control {
     background-color: white;
-    color: gray;
+    color: #808080;
   }
 }
 
