--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "form_legend_clear";
+@import "footer";
 @import "navbar";
 @import "form";
 @import "card_product_infos";
