noms classes modifiées pour éviter conflit global

--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -1,4 +1,4 @@
-.container {
+.container-home {
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 /* Wrapper styling */
-#wrapper {
+#wrapper-home {
   display: flex; /* Utilise Flexbox */
   align-items: center; /* Aligne verticalement */
   justify-content: center; /* Centre horizontalement */
