--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div id="wrapper">
+<div class="container-home">
+  <div id="wrapper-home">
     <div class="logo-wrapper ">
       <%= image_tag "froglab_home.png", class: "logo" %>
     </div>
