--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -1,46 +1,18 @@
-<nav class="navbar navbar-dark bg-dark d-flex justify-content-center">
+<nav class="row navbar navbar-dark bg-dark text-bg-dark border-bottom">
   <!-- Navbar content -->
-  <div class="logo-container">
-<%= image_tag "froglab_home.png", class:"logo" %>
+  <div class="col-1 logo-container">
+    <%= image_tag "froglab_logo_2.png", class:"logo" %>
   </div>
-<<<<<<< HEAD
-  <%= form_with url: communications_path, method: :get, local: true do |f| %>
-    <%= f.text_field :query, placeholder: "Tapez un mot-clé...", class: "bg-dark rounded-pill font-navbar"%>
-    <button type="submit" class="bg-dark rounded-pill font-navbar search-button">
+  <div class="col-6">
+    <%= form_with url: communications_path, method: :get, local: true do |f| %>
+      <%= f.text_field :query, placeholder: "Recherchez...", class: "bg-dark rounded-pill font-navbar search-bar"%>
+  </div>
+    <button type="submit" class="me-3 col-3 bg-dark rounded-pill font-navbar search-button">
       <i class="fa-solid fa-magnifying-glass"></i>
     </button>
     <%# <%= f.submit "Q", class: "bg-dark rounded-pill font-navbar search-button"%>
   <% end %>
 </nav>
-=======
-  <div class="btn-align btn col-2">
-    <%= link_to tickets_path, class: "btn-link" do%>
-      <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#F2F2F2"><path d="M200-120v-507.85q0-24.3 17.28-41.38 17.27-17.08 41.18-17.08h294.62q23.91 0 41.18 17.08 17.28 17.08 17.28 41.38V-120L406.15-226 200-120Zm33.85-56.79 172.3-87.75 171.54 87.75v-451.06q0-10.77-6.92-17.69-6.92-6.92-17.69-6.92H258.46q-10.77 0-17.69 6.92-6.92 6.92-6.92 17.69v451.06Zm492.3-85.36v-519.54q0-10.77-6.92-17.69-6.92-6.93-17.69-6.93H312.67v-33.84h388.87q23.91 0 41.18 17.07Q760-806 760-781.69v519.54h-33.85Zm-492.3-390.31H577.69 233.85Z"/></svg>
-      <p class="ticket-show-p-font ">Tickets</p>
-    <% end %>
-  </div>
-  <div class="btn-align btn col-2">
-    <%= link_to new_ticket_path, class: "btn-link" do%>
-      <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#F2F2F2"><path d="M240-180v-563.33q0-24.18 16.94-41.32 16.94-17.15 41.52-17.15h230.77v33.85H298.46q-9.23 0-16.92 7.69-7.69 7.7-7.69 16.93v510.71L480-320.72l206.15 88.1v-295.33H720V-180L480-283.08 240-180Zm33.85-587.95H529.23 273.85Zm412.3 166.16v-83.08h-83.07v-33.85h83.07v-83.08H720v83.08h83.08v33.85H720v83.08h-33.85Z"/></svg>
-      <p class="ticket-show-p-font ">Flag</p>
-    <% end %>
-  </div>
-  <div class="btn-align btn col-2">
-    <%= link_to actions_path, class: "btn-link" do%>
-      <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#F2F2F2"><path d="M644.23-243.85 530.69-357.38l27.54-27.54 85 85 170-170 27.54 28.54-196.54 197.53Zm0-289.23L530.69-646.62l27.54-27.53 85 85 170-170 27.54 28.53-196.54 197.54ZM120-315.38v-40h320v40H120Zm0-289.24v-40h320v40H120Z"/></svg>
-      <p class="ticket-show-p-font ">Actions</p>
-    <% end %>
-  </div>
-  <div class="btn-align btn col-2">
-    <%= link_to menu_path, class: "btn-link" do%>
-      <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#F2F2F2"><path d="M160-269.23v-40h640v40H160ZM160-460v-40h640v40H160Zm0-190.77v-40h640v40H160Z"/></svg>
-      <p class="ticket-show-p-font ">Menu</p>
-    <% end %>
-  </div>
-</div>
-
-
->>>>>>> master
 
 <div class="container-index justify-content-center mt-3">
   <% @communications.each do |communication| %>
