--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -156,8 +156,8 @@
             <div data-controller="switch-status" data-switch-status-id-value=<%= action.id %>>
               <input type="checkbox" data-action="change->switch-status#switch" id="toggle_<%= action.id %>" class="toggleCheckbox" <%= 'checked' if action.status == 'complétée' %> />
               <label for="toggle_<%= action.id %>" class='toggleContainer'>
-                <div>en cours</div>
-                <div>complété</div>
+                <div>En cours</div>
+                <div>Complété</div>
               </label>
             </div>
           </div>
