changes to be removed

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -12,6 +12,9 @@
     </button>
     <%# <%= f.submit "Q", class: "bg-dark rounded-pill font-navbar search-button"%>
   <% end %>
+   <div class="col-1 filter-logo">
+    <%= image_tag "filter_logo.png", class:"logo"%>
+  </div>
 </nav>
 
 <div class="container-index justify-content-center mt-3">
